--- a/help.me/app/src/main/AndroidManifest.xml
+++ b/help.me/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".SettingsActivity">
         </activity>
+        <activity android:name=".MedicalDetailsActivity">
+        </activity>
     </application>
 
 </manifest>
