Added sound effects to 'yes' 'no' buttons

--- a/help.me/app/src/main/AndroidManifest.xml
+++ b/help.me/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".MedicalDetailsActivity">
         </activity>
+        <activity android:name=".LifeThreateningAmergency">
+        </activity>
     </application>
 
 </manifest>
