--- a/help.me/app/src/main/AndroidManifest.xml
+++ b/help.me/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity android:name=".LifeThreateningAmergency">
         </activity>
+        <activity android:name=".Results">
+        </activity>
     </application>
 
 </manifest>
